--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-typed": "^2.0.12",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
